Add review changes to all notebooks and intro page

--- a/notebooks/coding/Intro to Python/11_Functions.ipynb
+++ b/notebooks/coding/Intro to Python/11_Functions.ipynb
@@ -54,7 +54,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even though we have variables a and b in the code, the function does not use them unless they are arguments to the function. Variables 'a' and 'b' inside the function are local variables and they only exist there. If we want to use global variables (variables outside of the function), the code will look like this:"
+    "Even though we have variables `a` and `b` in the code, the function does not use them unless they are arguments to the function. Variables `a` and `b` inside the function are local variables and they only exist there. If we want to use global variables (variables outside of the function), the code will look like this:"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(functions_exercises) =\n",
+    "(functions_exercises)=\n",
     "## Exercises\n",
     "-------\n",
     "* **Immutable vs Mutable** Functions can change the objects (variables) passed to them. Everything depends if an object is mutable. Compare the behaviour of the two functions below, where the one which changes the list is an example of an [*in-place algorithm*](https://en.wikipedia.org/wiki/In-place_algorithm):"
@@ -173,7 +173,7 @@
    "metadata": {},
    "source": [
     "----------\n",
-    "* **Simple Search** Define a function which checks if an element is present in a list and return a boolean value depending on the result. The signature should be `def simpleSearch(l, a):`"
+    "* **Simple Search** Define a function which checks if an element is present in a list and return a boolean value depending on the result. The signature should be `def simpleSearch(l, a):`."
    ]
   },
   {
@@ -267,7 +267,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
