--- a/notebooks/coding/Intro to Python/14_Dictionaries.ipynb
+++ b/notebooks/coding/Intro to Python/14_Dictionaries.ipynb
@@ -126,7 +126,7 @@
     "\n",
     "-------------\n",
     "\n",
-    "* **Countries per continent** Question very similair to the one in File Handling Section. Change the following code, so that the result is a dictionary:\n",
+    "* **Countries per continent** Question very similair to the one in {ref}`File Handling <file_handling_exercises>` exercises. Change the following code, so that the result is a dictionary:\n",
     "\n"
    ]
   },
@@ -205,7 +205,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
