--- a/notebooks/coding/Intro to Python/15_Flow_control_statements.ipynb
+++ b/notebooks/coding/Intro to Python/15_Flow_control_statements.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "The `break` and `continue` statements are used in loops (`while` or `for`) to modify the behaviour of the loop. `break` ends the loop, while `continue` ends the current iteration and continues onto the next one.\n",
     "\n",
-    "Example use of _break_ statement:"
+    "Example use of `break` statement:"
    ]
   },
   {
@@ -185,7 +185,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
