--- a/notebooks/coding/Intro to Python/17_Matplotlib.ipynb
+++ b/notebooks/coding/Intro to Python/17_Matplotlib.ipynb
@@ -10,7 +10,7 @@
     "```\n",
     "``` {thebe-button} Tun on live code\n",
     "```\n",
-    "[Matplotlib](https://matplotlib.org/) is a commonly used Python library for plotting data. Matplotlib functions are not built-in so we need to import it every time we want to plot something. The convention is to import _matplotlib.pyplot_ as _plt_, however, any prefix can be used:"
+    "[Matplotlib](https://matplotlib.org/) is a commonly used Python library for plotting data. Matplotlib functions are not built-in so we need to import it every time we want to plot something. The convention is to import `matplotlib.pyplot` as `plt`, however, any prefix can be used:"
    ]
   },
   {
@@ -22,7 +22,6 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Import other libraries to generate data\n",
-    "\n",
     "import numpy as np"
    ]
   },
@@ -32,13 +31,14 @@
    "source": [
     "Matplotlib functions usually return something, but in most cases you can have them as statements on their own as they update the object (plot) itself.\n",
     "\n",
-    "## Useful graph generation functions:\n",
+    "## Useful graph generation functions\n",
     "- `plt.plot(xdata, ydata, format, _kwargs_)` - plots [point data](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.plot.html#matplotlib.pyplot.plot) that can be either markers or joined by lines. The most commonly used graph type.\n",
     "- `plt.scatter(xdata, ydata, *kwargs*)` - a [scatter plot](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.scatter.html#matplotlib.pyplot.scatter) of ydata vs. xdata with varying marker size and/or colour.\n",
     "- `plt.hist(data, _kwargs_)` - plots a [histogram](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.hist.html#matplotlib.pyplot.hist), `_kwargs_` include `_bins_`, i.e. the number of bins to use.\n",
     "\n",
-    "## Graph decoration functions (used after graph generation function):\n",
-    "- `plt.grid(_kwargs_)` - creates gridlines, commonly used with plt.plot() type plots\n",
+    "## Graph decoration functions\n",
+    "Graph decoration functions are used after graph generation function, and there is plenty of them in the official documentation. Useful ones are listed below:\n",
+    "- `plt.grid(_kwargs_)` - creates gridlines, commonly used with `plt.plot()` type plots\n",
     "- `plt.legend(_kwargs_)` - create a legend in the plot, keyword arguement `_loc_` can determine legend's position, e.g. `_plt.legend(loc=\"upper left\")_` or `_plt.legend(loc=\"best\")_`. For documentation check [here](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.legend.html#matplotlib.pyplot.legend).\n",
     "- `plt.text(x, y, text, _kwargs_)` - insert text at a specified position, `_kwargs_` include `_fontsize_`, `_style_`, `_weight_`, `_color_`.\n",
     "- `plt.title(text, *kwargs*)` - sets the title.\n",
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
