--- a/notebooks/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
+++ b/notebooks/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
@@ -17,7 +17,7 @@
     "print(\"Hello world!\")\n",
     "```\n",
     "    \n",
-    "_print_ is a function in Python that takes an argument in brackets () and prints it out to the terminal."
+    "`print()` is a function in Python that takes an argument in brackets () and prints it out to the terminal."
    ]
   },
   {
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_print_ function can also print multiple lines, using '\\n' as a line separator in your text. Notice that you do not need to add spaces around '\\n' in the text:"
+    "`print()` function can also print multiple lines, using `\\n` as a line separator in your text. Notice that you do not need to add spaces around `\\n` in the text:"
    ]
   },
   {
@@ -67,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Multiple lines can be also achieved by triple apostrophe \"\"\"text\"\"\":"
+    "Multiple lines can be also achieved by triple apostrophe `\"\"\"text\"\"\"`:"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "metadata": {},
    "source": [
     "### Printing numbers\n",
-    "Apart from text, which we call a *string*, _print_ function can also take numbers and variables:"
+    "Apart from text, which we call a *string*, `print()` function can also take numbers and variables:"
    ]
   },
   {
@@ -145,14 +145,14 @@
     "## String formating\n",
     "``` {index} String formating (python)\n",
     "```\n",
-    "Sometimes we want to insert certain texts (*strings*) or numbers into _print_ statements.\n",
+    "Sometimes we want to insert certain texts (*strings*) or numbers into `print` statements.\n",
     "\n",
     "Inserting:\n",
     "* use `%s` in the statement where you want to insert text\n",
     "* use `%g` in the statement where you want to insert numbers, Python decides here how many significant figures are needed\n",
     "* use `%.xf`, where x is a number of significant figures you want displayed for your number\n",
     "\n",
-    "The syntax (coding rules) for inserting numbers/text into _print_ statement is:\n",
+    "The syntax (coding rules) for inserting numbers/text into `print` statement is:\n",
     "\n",
     "```python \n",
     "print(\"Text %s text text text\" % (\"text\"))\n",
@@ -242,7 +242,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Recent versions of python also support **f-strings** which allow us to the above in a more simple way. They are called f-strings because they require `f` to be written in front of the quotation marks:"
+    "Recent versions of python also support **f-strings** which allow us to do the above in a more simple way. They are called f-strings because they require `f` to be written in front of the quotation marks:"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both methods are valid so you can use whichever one suits you better!"
+    "All methods are valid so you can use whichever one suits you better!"
    ]
   },
   {
@@ -534,7 +534,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
