--- a/notebooks/coding/Intro to Python/2_Variables.ipynb
+++ b/notebooks/coding/Intro to Python/2_Variables.ipynb
@@ -24,9 +24,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Certain words have a special meaning in Python and cannot be used as variable names. These are: *and, as, assert, break, class, continue, def, del, elif, else, except, exec, finally, for, from, global, if, import, in, is, lambda, not, or, pass, print, raise, return, try, with, while,* and *yield*.\n",
+    "Certain words have a special meaning in Python and cannot be used as variable names. These are: `and, as, assert, break, class, continue, def, del, elif, else, except, exec, finally, for, from, global, if, import, in, is, lambda, not, or, pass, print, raise, return, try, with, while,` and `yield`.\n",
     "\n",
-    "Good variable names are usually descriptive, can be one letter symbols, abbreviation of words, containing lower/upper case, underscores, digits. They cannot start with digits. Variables are case sensitive so variable \"a\" is not the same as \"A\"."
+    "Good variable names are usually descriptive, can be one letter symbols, abbreviation of words, containing lower/upper case, underscores, digits. They cannot start with digits. Variables are case sensitive so variable `a` is not the same as `A`."
    ]
   },
   {
@@ -387,7 +387,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Objects can be compared to one another, where print statements will return True or False. Standard mathematical formulae in Boolean expressions are:\n",
+    "Objects can be compared to one another, where `print` statements will return `True` or `False`. Standard mathematical formulae in Boolean expressions are:\n",
     "- $a = b$ is `a == b`\n",
     "- $a \\neq b$ is `a != b`\n",
     "- $a > b$ is `a > b`\n",
@@ -522,7 +522,7 @@
    "metadata": {},
    "source": [
     "_______\n",
-    "* **String slicing**: Let `a=\"Bananas\"` and `b=\"Apples\"`: \n",
+    "* **String slicing**: Let `a = \"Bananas\"` and `b = \"Apples\"`: \n",
     "    - concatenate the strings\n",
     "    - take even characters from the resulting string\n",
     "    - take the last three characters\n",
@@ -568,7 +568,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "````{admonition} Anwser \n",
+    "````{admonition} Answer \n",
     ":class: dropdown\n",
     "\n",
     "```python\n",
@@ -612,13 +612,6 @@
     "\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -637,7 +630,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
