--- a/notebooks/coding/Intro to Python/4_While_loops.ipynb
+++ b/notebooks/coding/Intro to Python/4_While_loops.ipynb
@@ -8,7 +8,7 @@
     "# While loops\n",
     "``` {index} Loops: while loops\n",
     "```\n",
-    "`while` loops repeat instructions until certain condition is **False** (while the condition is **True**). The syntax is as follows:\n",
+    "`while` loops repeat instructions until certain condition is `False` (while the condition is `True`). The syntax is as follows:\n",
     "    \n",
     "```\n",
     "    while condition:\n",
@@ -17,13 +17,8 @@
     "    # Some more code to be executed once the while loop is over, executed once\n",
     "```\n",
     "    \n",
-    "Some _while_ loops are infinite, where the condition never becomes **False**. A _while_ loop, like `if` statements, needs the code to be indented."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Some `while` loops are infinite, where the condition never becomes `False`. A `while` loop, like `if` statements, needs the code to be indented.\n",
+    "\n",
     "## Example"
    ]
   },
@@ -79,7 +74,7 @@
     "\n",
     "* **Write a program** that prints all Fibonacci numbers smaller than 50. An example of a Fibonacci sequence is the following:\n",
     "\n",
-    "\\\\[ F_0 = 0, F_1 = 1, F_{n}=F_{n-1}+F_{n-2}\\\\]"
+    "\\\\[ F_0 = 0,\\quad F_1 = 1, \\quad F_{n}=F_{n-1}+F_{n-2}.\\\\]"
    ]
   },
   {
@@ -111,9 +106,9 @@
    "source": [
     "-----------\n",
     "\n",
-    "* **Create a _while_ loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Create a `while` loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) \\\\]"
+    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32). \\\\]"
    ]
   },
   {
@@ -139,13 +134,6 @@
     "\n",
     "````"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -164,7 +152,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
