--- a/notebooks/coding/Intro to Python/6_For_loops.ipynb
+++ b/notebooks/coding/Intro to Python/6_For_loops.ipynb
@@ -15,7 +15,7 @@
     "        # lines of code to be executed\n",
     "```\n",
     "        \n",
-    "The code will loop over all elements in the list and execute the same code for each of them. The code inside _for_ loop needs to be indented. For example:"
+    "The code will loop over all elements in the list and execute the same code for each of them. The code inside `for` loop needs to be indented. For example:"
    ]
   },
   {
@@ -54,11 +54,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apart from looping over elements, _for_ loops can be created for specified number of iterations using the `range()` function, which returns an iterable object. The syntax for `range()` is:\n",
+    "Apart from looping over elements,`for` loops can be created for specified number of iterations using the `range()` function, which returns an iterable object. The syntax for `range()` is:\n",
     "\n",
     "    range([start], stop, [step])\n",
     "    \n",
-    "This generates sort of a list with elements between start and stop, excluding stop. If step (increment) is not provided, every number is generated. If you use only one argument, _range(5)_ treats it as a stop value and it starts from 0."
+    "This generates sort of a list with elements between start and stop, excluding stop. If step (increment) is not provided, every number is generated. If you use only one argument, `range(5)` treats it as a stop value and it starts from 0."
    ]
   },
   {
@@ -155,9 +155,9 @@
     "## Exercises\n",
     "_____________\n",
     "\n",
-    "* **Create a _for_ loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Create a `for` loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "$$ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32)$$"
+    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32).\\\\]"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "        1 2 3 4 \n",
     "        1 2 3 4 5\n",
     "        \n",
-    "**HINT**: Consider iteratng over a range \\\\([1,...n]\\\\)"
+    "**HINT**: Consider iterating over a range \\\\([1,...n]\\\\)"
    ]
   },
   {
@@ -215,13 +215,6 @@
     "\n",
     "````"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -240,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
