--- a/notebooks/coding/Intro to Python/7_List_comprehensions.ipynb
+++ b/notebooks/coding/Intro to Python/7_List_comprehensions.ipynb
@@ -14,7 +14,7 @@
     "    some_list = [expression for item in iterable_object if condition]\n",
     "```\n",
     "    \n",
-    "This will generate a list with an expression based on items in 'iterable_object', if the condition is met. The 'if' condition is optional."
+    "This will generate a list with an expression based on items in 'iterable_object', if the condition is met. The `if` condition is optional."
    ]
   },
   {
@@ -132,7 +132,7 @@
     "_____________\n",
     "* **Create a list comprehension** to find Celsius temperatures for Fahrenheit temperatures between \\\\(20^\\circ\\\\)F and \\\\(80^\\circ\\\\)F at \\\\(5^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) \\\\]"
+    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32). \\\\]"
    ]
   },
   {
@@ -192,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
