--- a/notebooks/coding/Intro to Python/9_Handling_errors.ipynb
+++ b/notebooks/coding/Intro to Python/9_Handling_errors.ipynb
@@ -33,7 +33,7 @@
     "\n",
     "(raising_errors)=\n",
     "## Raising errors\n",
-    "In-built functions trigger or _raise_ errors in Python. We can do that as well by using _raise_:\n",
+    "In-built functions trigger or `raise` errors in Python. We can do that as well by using _raise_:\n",
     "\n",
     "```python\n",
     "    raise ValueError\n",
@@ -152,6 +152,10 @@
     "        \n",
     "Compute the sum of the numerical elements of the list (do not use the `type()` function!). Is the sum what you expected? Do you notice anything interesting regarding the boolean constants?\n",
     "\n",
+    "```{margin}\n",
+    "You can look up here more on flow control statemnts, such as {ref}`pass statement <pass>`.\n",
+    "```\n",
+    "\n",
     "**HINT**: Consider using a `pass` statement in the `except` block which circumvents (*ignores*) the raised error and continues the execution."
    ]
   },
@@ -203,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
