--- a/notebooks/coding/Intro to Python/10_Importing.ipynb
+++ b/notebooks/coding/Intro to Python/10_Importing.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing the whole math module allows us to use everything inside it, such as the sin function. However, if we only need the sin function from the math module, it is good practice to import only that."
+    "Importing the whole math module allows us to use everything inside it, such as the `sin` function. However, if we only need the `sin` function from the math module, it is good practice to import only that."
    ]
   },
   {
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When imported like this, we no longer need to use the \"math.\" prefix, because this also imported sin into our namespace. If we instead do:"
+    "When imported like this, we no longer need to use the `math.` prefix, because this also imported `sin` into our namespace. If we instead do:"
    ]
   },
   {
@@ -88,7 +88,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have imported everything from the math module AND we put everything from it into our namespace. This is generally **not** recommended, as it can overshadow our other functions with the same name. The same can happen if we import a single function. We can avoid this by renaming our imports."
+    "Here we have imported everything from the math module **and** we put everything from it into our namespace. This is generally **not** recommended, as it can overshadow our other functions with the same name. The same can happen if we import a single function. We can avoid this by renaming our imports."
    ]
   },
   {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to import a function from a specific file, say a file named 'my_module.py' and it is located in the same folder as the python script into which we want to import it, we simply write:"
+    "If we want to import a function from a specific file, say a file named `my_module.py` and it is located in the same folder as the python script into which we want to import it, we simply write:"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where my_function is just a square in this case. In general, we can specify a path to our module. For example, if our my_module.py file is on our Desktop, we could import it with:"
+    "Where `my_function` is just a square in this case. In general, we can specify a path to our module. For example, if our `my_module.py` file is on our Desktop, we could import it with:"
    ]
   },
   {
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
