--- a/notebooks/coding/Intro to Python/12_Tuples.ipynb
+++ b/notebooks/coding/Intro to Python/12_Tuples.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "(tuples_exercies)=\n",
+    "(tuples_exercises)=\n",
     "## Exercises\n",
     "\n",
     "--------------\n",
@@ -140,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
