--- a/notebooks/coding/Intro to Python/13_File_handling.ipynb
+++ b/notebooks/coding/Intro to Python/13_File_handling.ipynb
@@ -34,7 +34,7 @@
     "(python_file_handling)=\n",
     "## Python\n",
     "\n",
-    "It is usually best to read and write files using the **with statement** which will improve our syntax and do a lot of things automatically for us (like closing the file we opened).\n",
+    "It is usually best to read and write files using the `with` statement which will improve our syntax and do a lot of things automatically for us (like closing the file we opened).\n",
     "\n",
     "Our file contains 3 lines at the beginning and 1 line at the end which we do not want to extract. Additionally, the temperature and density values are separated by whitespaces. Here is an example of how we could extract the data into two arrays:"
    ]
@@ -93,12 +93,12 @@
     "(numpy_file_handling)=\n",
     "## NumPy\n",
     "\n",
-    "NumPy's [**genfromtxt**](https://numpy.org/doc/1.18/reference/generated/numpy.genfromtxt.html) (generate from text) function provides full control over the file which we are trying to open. It initialises a numpy array from the data. Some of the parameters include:\n",
-    "    - `dtype`: set a data type. If not set, determines the data type automatically for each column\n",
-    "    - `comments`: skips every line starting with a string that is set here. '#' by default.\n",
-    "    - `skip_header`: number of lines to skip at the beginning of the file\n",
-    "    - `skip_footer`: number of lines to skip at the end of the file\n",
-    "    - `delimiter`: the string used to separate values. Any whitespaces, by default.\n",
+    "NumPy's [`genfromtxt`](https://numpy.org/doc/1.18/reference/generated/numpy.genfromtxt.html) (generate from text) function provides full control over the file which we are trying to open. It initialises a numpy array from the data. Some of the parameters include:\n",
+    "* `dtype` - set a data type; if not set, determines the data type automatically for each column\n",
+    "* `comments` - skips every line starting with a string that is set here; `#` by default\n",
+    "* `skip_header` - number of lines to skip at the beginning of the file\n",
+    "* `skip_footer` - number of lines to skip at the end of the file\n",
+    "* `delimiter` - the string used to separate values; any whitespaces by default\n",
     "    \n",
     "For our file, we do not have to change anything since comments are marked by a # at the beginning of the line and the values are separated by whitespaces."
    ]
@@ -134,7 +134,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can save our array to a file in multiple ways - examples below. If we plan on using the array in another python code, perhaps it is best to save it as a .npy file. We can later easily load the .npy file and reconstruct the original array. The reader is encouraged to read about **pickling** in Python, which allows any object in Python to be saved in this way, not only numpy arrays."
+    "We can save our array to a file in multiple ways - examples below. If we plan on using the array in another python code, perhaps it is best to save it as a `.npy` file. We can later easily load the `.npy` file and reconstruct the original array. The reader is encouraged to read about **pickling** in Python, which allows any object in Python to be saved in this way, not only numpy arrays."
    ]
   },
   {
@@ -173,9 +173,9 @@
     "(pandas_file_handling)=\n",
     "## Pandas\n",
     "\n",
-    "Despite its name, panda's [**read_csv**](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html) can read many different types of files, including our .dat file. Pandas DataFrame is the primary data structure in pandas, so this function will generate one such DataFrame. It is a very powerful object with many capabilities, our own tutorial can be found in Pandas {ref}`pandas_intro`.\n",
+    "Despite its name, pandas' [`read_csv`](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html) can read many different types of files, including our `.dat` file. Pandas `DataFrame` is the primary data structure in pandas, so this function will generate one such `DataFrame`. It is a very powerful object with many capabilities, our own tutorial can be found in {ref}`Introduction to Pandas <pandas_intro>`.\n",
     "\n",
-    "As in the NumPy example, we specify that our comment lines begin with a '#' and that our delimiter is whitespace(s). Furthermore, we can give names (header) to our columns in the DataFrame, where we assign our list col_names using the names parameter. Pandas' read_csv() by default automatically sets this from the header line in our file, which we do not have in our file so we set header=None."
+    "As in the NumPy example, we specify that our comment lines begin with a `#` and that our delimiter is whitespace(s). Furthermore, we can give names (header) to our columns in the `DataFrame`, where we assign our list `col_names` using the names parameter. Pandas' `read_csv()` by default automatically sets this from the header line in our file, which we do not have in our file so we set `header=None`."
    ]
   },
   {
@@ -265,7 +265,7 @@
    "metadata": {},
    "source": [
     "--------------------\n",
-    "* **Hottest countires**: Using the same file as in the exercise before, via Numpy, find the countries with the average temperature above 27.\n",
+    "* **Hottest countires**: Using the same file as in the exercise before, via NumPy, find the countries with the average temperature above 27.\n",
     "\n",
     "**HINT**: Set `dtype=['U20', float]`, remember about delimiters."
    ]
@@ -348,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
