--- a/notebooks/coding/Intro to Python/3_If_statement.ipynb
+++ b/notebooks/coding/Intro to Python/3_If_statement.ipynb
@@ -7,7 +7,7 @@
     "(if_statement)=\n",
     "# If statement\n",
     "\n",
-    "_If_ construct allows to create cases in the code based on conditions:\n",
+    "`if` construct allows to create cases in the code based on conditions:\n",
     "\n",
     "```\n",
     "    if condition:\n",
@@ -141,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
