--- a/notebooks/coding/Intro to Python/8_Nested_lists.ipynb
+++ b/notebooks/coding/Intro to Python/8_Nested_lists.ipynb
@@ -112,10 +112,9 @@
    "source": [
     "import random\n",
     "\n",
-    "# setting a seed, which will print the same sequence of numbers \n",
-    "# every time \n",
+    "# A seed prints the same sequence of numbers every time  \n",
     "# USE FOR TESTING ONLY\n",
-    "# when done delete the following line!\n",
+    "# Delete the following line, when done\n",
     "random.seed(1)  \n",
     "\n",
     "a = 10\n",
@@ -129,7 +128,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The numbers in the grid represent the height of a particulair coordinate. The UFO can land only on a local peak i.e. a point surrounded by the points of *equal-or-lower* height e.g\n",
+    "The numbers in the grid represent the height of a particulair coordinate. The UFO can land only on a local peak i.e. a point surrounded by the points of *equal-or-lower* height, e.g\n",
     "\n",
     "    1 2 3\n",
     "    5 9 6\n",
@@ -192,7 +191,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
