--- a/_sources/mathematics/numerical_methods/Solving_PDEs_SOR.ipynb
+++ b/_sources/mathematics/numerical_methods/Solving_PDEs_SOR.ipynb
@@ -284,7 +284,7 @@
    "source": [
     "Set up and run SOR algorithm:\n",
     "\n",
-    "````{margin} Psuedocode for SOR algorithm\n",
+    "````{margin} Pseudocode for SOR algorithm\n",
     "You can find a pseudocode version of the algorithm [here](https://en.wikipedia.org/wiki/Successive_over-relaxation#Algorithm). You may wish to rewrite the code in a way that suits you the most!!\n",
     "````"
    ]
